samples/_failures_safe/1761090807_321ed2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0483bc19.c: In function ‘main’:
./samples/SAFE/__tmp_0483bc19.c:124:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  124 |     char line
      |     ^~~~
./samples/SAFE/__tmp_0483bc19.c:124:5: error: expected declaration or statement at end of input
